--- a/1-1.10-26/main.tex
+++ b/1-1.10-26/main.tex
@@ -71,9 +71,9 @@
 	\begin{align}
 		a+b = \myvec{2 \\ 2 \\ -5} + \myvec{2 \\ 1\\3}  = \myvec{4 \\ 3\\-2}\label{eq1.1.10.26.1}
 	\end{align}
-	Calculating $\norm{a+b}$,
+	Calculating $\norm{a+b}$, using the formula $\norm{c}=\sqrt{c_x^2 + c_y^2 + c_z^2}$
 	\begin{align}
-		\norm{a+b} = \sqrt{29} \label{eq1.1.10.26.2}
+		\norm{a+b} = \sqrt{4^2 + 3^2 + 2^2}=\sqrt{29} \label{eq1.1.10.26.2}
 	\end{align}
 	$\therefore$ $c$ is,
 	\begin{align}
