--- a/3-3.3-6/main.tex
+++ b/3-3.3-6/main.tex
@@ -62,6 +62,11 @@
 Construct a triangle $ABC$ with side $BC = 6$cm, $B = \angle45\degree$, $A = \angle105\degree$
 
 \textbf{Solution: } \\
+\begin{table}[h!]    
+	\centering
+	\input{tables/table1.tex}
+	\caption{}
+\end{table}\\
 We know that $ \angle A + \angle B + \angle C = 180\degree $.\\
 	\begin{align}
 		\angle C = 180 - \angle A - \angle B = 30\degree
