--- a/3-3.3-6/tables/table1.tex
+++ b/3-3.3-6/tables/table1.tex
@@ -3,11 +3,15 @@
 		\hline
 		\textbf{Variable} & \textbf{Description} & \textbf{Formula} \\ 
 		\hline
-		$a$   & A vector & $A = \myvec{2 \\ 2 \\ -5}$ \\ 
+		$a$   & Length BC & $a = 6$ \\ 
 		\hline
-		$b$   &  A vector &  $B = \myvec{2 \\ 1\\3}$\\ 
+		$c$ & Length AB & $c= \frac{a}{\cos{A}+\frac{\sin{B}}{\sin{C}}+\cos{C}}$\\
 		\hline
-		$c$   & Unit vector in the direction of $a+b$ &  $c = \frac{a+b}{\norm{a+b}}$\\ 
+		$A$   & A Point to be plotted & $A = \myvec{c\sin{C} \\ c\cos{C}}$ \\ 
+		\hline
+		$B$   &  A Point to be plotted &  $B = \myvec{0 \\ 0}$\\ 
+		\hline
+		$C$   &  A Point to be plotted &  $C = \myvec{a \\ 0}$\\ 
 		\hline
 	\end{tabular}
 \end{center}  
