--- a/4-4.2-22/main.tex
+++ b/4-4.2-22/main.tex
@@ -87,7 +87,11 @@ If $L_1$ and $L_2$ are parallel lines, then their direction cosines must be the 
 		 \implies \frac{b_1}{\sqrt{a_1^2 + b_1^2}} = \frac{b_2}{\sqrt{a_2^2 + b_2^2}}
 	\end{align}
 	Thus proving that $\frac{a_1}{b_1} = \frac{a_2}{b_2}$.\\
-	
+	\begin{figure}[h!]
+		\centering
+		\includegraphics[width=0.7\linewidth]{figs/fig1.png}
+		\caption{Assuming two lines which satisfy the above proven condition and proving them with plot. }
+	\end{figure}	
 \end{document}  
 
 
