--- a/JEE-ASSN/2/main.tex
+++ b/JEE-ASSN/2/main.tex
@@ -54,7 +54,7 @@ Indian Institute of Technology Hyderabad
     
     \begin{enumerate}
     \item{
-          	A plane passes through the points $A\brak{1,2,3}$, $B\brak{2,3,1}$ and $C\brak{2,4,2}$. If $O$ is the origin and $P$ is $\brak{2,-1,})$, then the projection of vector $\overrightarrow{OP}$ on this plane is of length:\\ \text{  }\hfill
+          	A plane passes through the points $A\brak{1,2,3}$, $B\brak{2,3,1}$ and $C\brak{2,4,2}$. If $O$ is the origin and $P$ is $\brak{2,-1,1}$, then the projection of vector $\overrightarrow{OP}$ on this plane is of length:\\ \text{  }\hfill
                 {(2021 - 4 Marks)}
             \begin{multicols}{4}
 				\begin{enumerate}
