gateassn1-added tables

--- a/GATE-ASSN/1/main.tex
+++ b/GATE-ASSN/1/main.tex
@@ -116,15 +116,7 @@ Indian Institute of Technology Hyderabad
  	\item{
         	An isolated 4-hour storm occurred over a catchment as follows:
         	
-        	\begin{center}
-        		\begin{tabular}{|c|c|c|c|c|}
-        			\hline
-        			Time & 1st hour & 2nd hour & 3rd hour & 4th hour \\
-        			\hline
-        			Rainfall (mm) & 9 & 28 & 12 & 7 \\
-        			\hline
-        		\end{tabular}
-        	\end{center}
+        	\input{tables/table1}
         	
         	The $\phi$ index for the catchment is 10 mm/h. The estimated runoff depth from the catchment due to the above storm is\text{ }
         	\hfill
@@ -233,16 +225,7 @@ Indian Institute of Technology Hyderabad
 	
 			The following data pertains to the number of commercial vehicles per day for the design of a flexible pavement for a national highway as per IRC: 37-1984 
 			
-			\begin{center}
-				\begin{tabular}{|c|c|c|}
-					\hline
-					Type of commercial vehicle & Number of vehicles per day & Vehicle Damage Factor \\
-					\hline
-					Two axle trucks & 2000 & 5 \\
-					Tandem axle trucks & 200 & 6 \\
-					\hline
-				\end{tabular}
-			\end{center}
+			\input{tables/table2}
 			
 			Assuming a traffic growth factor of 7.5\% per annum for both types of vehicles, the cumulative number of standard axle load repetitions (in million) for a design life of ten years is:
 			\text{   }\hfill
@@ -260,16 +243,7 @@ Indian Institute of Technology Hyderabad
     \item{
 	
 			Match the following tests on aggregate and its properties:
-			\begin{center}
-				\begin{tabular}{|c|l|c|l|}
-					\hline
-					\textbf{Test} & \textbf{Property}  \\ \hline
-					P. Crushing Test & 1. Hardness \\ \hline
-					Q. Los Angeles abrasion test & 2. Weathering \\ \hline
-					R. Soundness test & 3. Shape \\ \hline
-					S. Angularity test & 4. Strength \\ \hline
-				\end{tabular}
-			\end{center}
+			\input{tables/table3}
 			\text{   }\hfill
 			
 			\begin{multicols}{2}
@@ -304,16 +278,7 @@ Indian Institute of Technology Hyderabad
         	
         	The following table gives data of consecutive coordinates in respect of a closed theodolite traverse PQRSP.
         	
-        	\begin{center}
-        		\begin{tabular}{|c|c|c|c|c|}
-        			\hline
-        			\textbf{Station} & \textbf{Northing, m} & \textbf{Southing, m} & \textbf{Easting, m} & \textbf{Westing, m} \\ \hline
-        			P & 400.75 & & & 300.5 \\ \hline
-        			Q & 100.25 & & 199.25 & \\ \hline
-        			R & & 199.0 & 399.75 & \\ \hline
-        			S & & 300.0 & & 200.5 \\ \hline
-        		\end{tabular}
-        	\end{center}
+        	\input{tables/table4}
         	
         	The magnitude and direction of error of closure in whole circle bearing are
         	
@@ -333,15 +298,7 @@ Indian Institute of Technology Hyderabad
         	
         	The following measurements were made during testing a leveling instrument.
         	
-        	\begin{center}
-        		\begin{tabular}{|c|c|c|}
-        			\hline
-        			\textbf{Instrument at} & \multicolumn{2}{c|}{\textbf{Staff Reading at}} \\ \hline
-        			& \(P_1\) & \(Q_1\) \\ \hline
-        			P & 2.800 m & 1.700 m \\ \hline
-        			Q & 2.700 m & 1.800 m \\ \hline
-        		\end{tabular}
-        	\end{center}
+        	\input{tables/table5}
         	
         	\(P_1\) is close to P and \(Q_1\) is close to Q. If the reduced level of station P is 100.000 m, the reduced level of station Q is
         	
