gateassn3-added tables

--- a/GATE-ASSN/3/tables/table1.tex
+++ b/GATE-ASSN/3/tables/table1.tex
@@ -1,11 +1,7 @@
-\begin{center}
-	\begin{tabular}{|c|l|c|l|}
-		\hline
-		\textbf{Category} & \textbf{Amount(Rs.)}  \\ \hline
-		Food & 4000 \\ \hline
-		Clothing & 1200 \\ \hline
-		Rent & 2000 \\ \hline
-		Savings & 1500 \\ \hline
-		Other Expenses & 1800 \\ \hline
-	\end{tabular}
-\end{center}
+\begin{tabular}{c@{\hspace{3cm}}c}
+	\textbf{Column I} & \textbf{Column II} \\
+	P. orifice meter & 1. high head loss and low cost \\
+	Q. venturi meter & 2. high head loss and high cost \\
+	& 3. low head loss and high cost \\
+	& 4. low head loss and low cost \\
+\end{tabular}
