--- a/GATE-ASSN/3/main.tex
+++ b/GATE-ASSN/3/main.tex
@@ -249,13 +249,7 @@ Indian Institute of Technology Hyderabad
         }
     \item{
             Match the devices in Column I with the characteristics in Column II.
-            \begin{tabular}{c@{\hspace{3cm}}c}
-            	\textbf{Column I} & \textbf{Column II} \\
-            	P. orifice meter & 1. high head loss and low cost \\
-            	Q. venturi meter & 2. high head loss and high cost \\
-            	& 3. low head loss and high cost \\
-            	& 4. low head loss and low cost \\
-            \end{tabular}
+            \input{tables/table1}
             \begin{multicols}{4}
 				\begin{enumerate}
 					\item P - 2; Q - 4
