--- a/MISC/main.tex
+++ b/MISC/main.tex
@@ -172,7 +172,7 @@ Now, we will use Affine Transformations to get the standard ellipse equation.
 Where 
 
 \begin{align}
-	f_0 &= \vec{u}^\text{T}\vec{V}^{-1}\vec{u} - f  = \frac{25}{4} \myvec{-1 & 1} \myvec{\frac{7}{12} & \frac{-1}{12} \\ \frac{7}{12} & \frac{-1}{12}}  \myvec{-1 \\ 1}  = \frac{25}{12}\\
+	f_0 &= \vec{u}^\text{T}\vec{V}^{-1}\vec{u} - f  = \frac{25}{4} \myvec{-1 & 1} \myvec{\frac{7}{12} & \frac{-1}{12} \\ \frac{7}{12} & \frac{-1}{12}}  \myvec{-1 \\ 1}  - \frac{7}{4}= \frac{25}{12} -  \frac{7}{4} = \frac{1}{3}\\
 	\vec{c} &= -\vec{V}^{-1}\vec{u} = -\frac{5}{4}  \myvec{-1 & 1} \myvec{\frac{7}{12} & \frac{-1}{12} \\ \frac{7}{12} & \frac{-1}{12}}\myvec{ -1 \\ 1} = \frac{5}{6}  \myvec{ 1 \\ -1}
 \end{align}
 
