--- a/MISC/main.tex
+++ b/MISC/main.tex
@@ -110,32 +110,32 @@ To find $\vec{D}$, we will have to find the eigen values of the matrx $\vec{V}$.
 	\begin{align}
 		|\vec{V}  - \lambda\vec{I}|  &= 0,\\
 		|\vec{V}  - \lambda\vec{I}|  &= \mydet{\frac{7}{4} - \lambda& \frac{1}{4}\\ \frac{1}{4} & \frac{7}{4} - \lambda}\\
-		\lambda_1, \lambda_2 &= 2 , \frac{3}{2} \\
-		\therefore 	\vec{D} &= \myvec{2 & 0 \\ 0 & \frac{3}{2}} , \label{Ddef}
+		\lambda_1, \lambda_2 &= \frac{3}{2} , 2\\
+		\therefore 	\vec{D} &= \myvec{\frac{3}{2} & 0 \\ 0 & 2	} , \label{Ddef}
 	\end{align}
-Note: In \eqref{Ddef}, the order of the eigen values that I have chosen is random but once a certain order has been set for the eigen values, then that order must be followed throughout the procedure. \\
+Note: In \eqref{Ddef}, the order of the eigen values that I have chosen is from smallest to biggest due to eccentricity calculation\\
 \\
-Now, to find $\vec{P}$ which is the matrix containing the normalised eigen vectors. So we have to find the eigen-values.
+Now, to find $\vec{P}$ which is the matrix containing the normalized eigen vectors. So we have to find the eigen-values.
 
 
 
 \begin{align}
-	\vec{V}\vec{p_2^\prime} &= \lambda_2 \vec{p_2^\prime} \\
-	\myvec{\frac{7}{4} & \frac{1}{4} \\ \frac{1}{4} & \frac{7}{4}} \vec{p_2^\prime}  &= 2\vec{p_2^\prime} \\
+	\vec{V}\vec{p_1^\prime} &= \lambda_1 \vec{p_1^\prime} \\
+	\myvec{\frac{7}{4} & \frac{1}{4} \\ \frac{1}{4} & \frac{7}{4}} \vec{p_1^\prime}  &= \frac{3}{2}\vec{p_2^\prime} \\
 \end{align}
 Taking an augmented matrix,
 \begin{align}
 	\brak{
 	\begin{array}{cc|c}
-		\frac{7}{4} - \lambda_2 & \frac{1}{4} & 0\\ 
-		\frac{1}{4} & \frac{7}{4} - \lambda_2& 0
-	\end{array}}\vec{p_2^\prime}  &=  \myvec{0 \\ 0} 
+		\frac{7}{4} - \lambda_1 & \frac{1}{4} & 0\\ 
+		\frac{1}{4} & \frac{7}{4} - \lambda_1& 0
+	\end{array}}\vec{p_1^\prime}  &=  \myvec{0 \\ 0} 
 \end{align}
 \begin{align}
 	\brak{
 	\begin{array}{cc|c}
-		\frac{1}{4} & \frac{1}{4} & 2\\ 
-		\frac{1}{4} & \frac{1}{4} & 2
+		\frac{1}{4} & \frac{1}{4} & \frac{3}{2}\\ 
+		\frac{1}{4} & \frac{1}{4} & \frac{3}{2}
 	\end{array}}
 	\xleftrightarrow[]{R_1 \leftarrow {4 R_1}}
 	\xleftrightarrow[]{R_2 \leftarrow {R_2-\frac{1}{4}R_1}}
@@ -145,21 +145,21 @@ Taking an augmented matrix,
 		0 & 0 & 0
 		\end{array}}
 \end{align}
-If we take $\vec{p_2^\prime}  = \myvec{p_{21}^\prime \\ p_{22}^\prime}$, and put in the above equation, we get,
+If we take $\vec{p_1^\prime}  = \myvec{p_{11}^\prime \\ p_{12}^\prime}$, and put in the above equation, we get,
 \begin{align}
-	\vec{p_2^\prime} = p_{21}^\prime \myvec{-1 \\ 1} \implies \vec{p_2^\prime} =  \myvec{-1 \\ 1}
+	\vec{p_1^\prime} = p_{11}^\prime \myvec{-1 \\ 1} \implies\frac{3}{2} \vec{1_2^\prime} =  \myvec{-1 \\ 1}
 \end{align}
-$\therefore \vec{p_2^\prime}  = \myvec{-1 \\ 1} \implies \vec{p_2} = \frac{\vec{p_2^\prime} }{\norm{\vec{p_2^\prime}}}  = \myvec{ -\frac{1}{\sqrt{2}} \\ \frac{1}{\sqrt{2}}}$ \\
-Similarly solving for $\vec{p_1^\prime}$ , we get,
+$\therefore \vec{p_1^\prime}  = \myvec{-1 \\ 1} \implies \vec{p_1} = \frac{\vec{p_1^\prime} }{\norm{\vec{p_1^\prime}}}  = \myvec{ -\frac{1}{\sqrt{2}} \\ \frac{1}{\sqrt{2}}}$ \\
+Similarly solving for $\vec{p_2^\prime}$ , we get,
 
 \begin{align}
-	\vec{p_1^\prime} &=  \myvec{1 \\ 1} \\
+	\vec{p_2^\prime} &=  \myvec{1 \\ 1} \\
 \end{align} 
-$\therefore \vec{p_1^\prime}  = \myvec{1 \\ 1} \implies \vec{p_1} = \frac{\vec{p_1^\prime} }{\norm{\vec{p_1^\prime}}}  = \myvec{ \frac{1}{\sqrt{2}} \\ \frac{1}{\sqrt{2}}}$ \\
+$\therefore \vec{p_2^\prime}  = \myvec{1 \\ 1} \implies \vec{p_2} = \frac{\vec{p_2^\prime} }{\norm{\vec{p_2^\prime}}}  = \myvec{ \frac{1}{\sqrt{2}} \\ \frac{1}{\sqrt{2}}}$ \\
 By definition $\vec{P} = \sbrak{\vec{p_1} ~ \vec{p_2}}$ \\ 
 
 \begin{align}
-	\vec{P} = \myvec{ \frac{1}{\sqrt{2}} & -\frac{1}{\sqrt{2}} \\ \frac{1}{\sqrt{2}} & \frac{1}{\sqrt{2}} } \label{Rdef}
+	\vec{P} = \myvec{ - \frac{1}{\sqrt{2}} & \frac{1}{\sqrt{2}} \\ \frac{1}{\sqrt{2}} & \frac{1}{\sqrt{2}} } \label{Rdef}
 \end{align}
 
 Now, we will use Affine Transformations to get the standard ellipse equation.
@@ -172,14 +172,14 @@ Now, we will use Affine Transformations to get the standard ellipse equation.
 Where 
 
 \begin{align}
-	f_0 &= \vec{u}^\text{T}\vec{V}^{-1}\vec{u} - f  = \frac{25}{4} \myvec{-1 & 1} \myvec{\frac{7}{12} & \frac{-1}{12} \\ \frac{7}{12} & \frac{-1}{12}}  \myvec{-1 \\ 1}  - \frac{7}{4}= \frac{25}{12} -  \frac{7}{4} = \frac{1}{3}\\
-	\vec{c} &= -\vec{V}^{-1}\vec{u} = -\frac{5}{4}  \myvec{-1 & 1} \myvec{\frac{7}{12} & \frac{-1}{12} \\ \frac{7}{12} & \frac{-1}{12}}\myvec{ -1 \\ 1} = \frac{5}{6}  \myvec{ 1 \\ -1}
+	f_0 &= \vec{u}^\text{T}\vec{V}^{-1}\vec{u} - f  = \frac{25}{4} \myvec{-1 & 1} \myvec{\frac{7}{12} & \frac{-1}{12} \\ \frac{-1}{12} & \frac{7}{12}}  \myvec{-1 \\ 1}  - \frac{7}{4}= \frac{25}{12} -  \frac{7}{4} = \frac{1}{3}\\
+	\vec{c} &= -\vec{V}^{-1}\vec{u} = -\frac{5}{4}  \myvec{-1 & 1} \myvec{\frac{7}{12} & \frac{-1}{12} \\ \frac{-1}{12} & \frac{7}{12}}\myvec{ -1 \\ 1} = \frac{5}{6}  \myvec{ 1 \\ -1}
 \end{align}
 
 Finally, we get the standard form of the ellipse.
 
 \begin{align}
-		\vec{y}^\text{T}\myvec{2 & 0 \\ 0 & \frac{3}{2}}\vec{y} &= \frac{1}{3}
+		\vec{y}^\text{T}\myvec{\frac{3}{2} & 0 \\ 0 & 2}\vec{y} &= \frac{1}{3}
 \end{align}
 Plotting the standard and the actual ellipse using python,
 
