--- a/MISC/tables/table1.tex
+++ b/MISC/tables/table1.tex
@@ -2,7 +2,9 @@
     \hline
     \textbf{Variable} & \textbf{Description} & \textbf{Value}\\
 	\hline
-	$\vec{n}^\top x= c$ & Directrix Equation & $\myvec{1 & -1} x = 3$\\
+	$\vec{n}$ &Normal of Directrix& $\myvec{1 \\ -1} $\\
+	\hline
+	$\vec{c}$ & c of Directrix& $ 3$\\
 	\hline
 	$\vec{e}$ & Eccentricity of conic & $\frac{1}{2}$\\
 	\hline
