--- a/MISC/main.tex
+++ b/MISC/main.tex
@@ -152,7 +152,7 @@ Taking an augmented matrix,
 \end{align}
 If we take $\vec{p_1^\prime}  = \myvec{p_{11}^\prime \\ p_{12}^\prime}$, and put in the above equation, we get,
 \begin{align}
-	\vec{p_1^\prime} = p_{11}^\prime \myvec{-1 \\ 1} \implies\frac{3}{2} \vec{1_2^\prime} =  \myvec{-1 \\ 1}
+	\vec{p_1^\prime} = p_{11}^\prime \myvec{-1 \\ 1} \implies \vec{p_1^\prime} =  \myvec{-1 \\ 1}
 \end{align}
 $\therefore \vec{p_1^\prime}  = \myvec{-1 \\ 1} \implies \vec{p_1} = \frac{\vec{p_1^\prime} }{\norm{\vec{p_1^\prime}}}  = \myvec{ -\frac{1}{\sqrt{2}} \\ \frac{1}{\sqrt{2}}}$ \\
 Similarly solving for $\vec{p_2^\prime}$ , we get,
