--- a/MISC/Documentation/main.tex
+++ b/MISC/Documentation/main.tex
@@ -134,7 +134,7 @@ Taking an augmented matrix,
 	\begin{array}{cc|c}
 		\frac{7}{4} - \lambda_1 & \frac{1}{4} & 0\\ 
 		\frac{1}{4} & \frac{7}{4} - \lambda_1& 0
-	\end{array}}\vec{p_1^\prime}  &=  \myvec{0 \\ 0} 
+	\end{array}}\vec{p_1^\prime} 
 \end{align}
 \begin{align}
 	\brak{
